--- a/VRChat/16/1005516.html
+++ b/VRChat/16/1005516.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KOaPGUY0GCKcaaC9qdYRlTpfMLjBLGfOXR/MIwIw0YI="></script>
+    "CWtcMFWQWioU7vOTzGsR3ji6lHR9hr+yldZJScnbxLs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】VRC想定_超シンプル扇子(156ポリゴン)","description":"二作品目の小物『扇子』です。\n\n使いやすいようにアニメーション追加と\nFixed Jointを使った装備方法を説明に追加しました\n\nとりあえず開閉はできるのと\n最低限塗りやすそうなUVにはなってます。\n\n一応本物風の開閉機構にはなっているので\n影とかをちゃんとつければいい感じに見える…ハズ。\n\n有料再配布以外はお好きにお使いください。\n\n2018-10-07\n・sceneを削除してprefab追加","url":"https://booth.pm/ja/items/1005516","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2e38c3c4-71ff-4201-8d0d-11df6e2b715b/i/1005516/81b177e1-36c0-47aa-a088-605adfb09bb8_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KOaPGUY0GCKcaaC9qdYRlTpfMLjBLGfOXR/MIwIw0YI="></script>
+    nonce="CWtcMFWQWioU7vOTzGsR3ji6lHR9hr+yldZJScnbxLs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1005516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1005516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
