--- a/VRChat/34/998934.html
+++ b/VRChat/34/998934.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "I9RLYhC+PpX5ae+Y5+ThVeaDEM6GR4aKPPgVWDLGPyg="></script>
+    "55upmQutKBnHpI0XswY7Rd38tv37v3SqFQJ+vt58aE4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat想定】MCF ファンタジー杖","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\nローポリファンタジー杖。\n杖本体4色×クリスタルor珠の4色でカラーチェンジ！\nunity側でお好きなマテリアルを組み合わせてください。\n\n三角面：330\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/998934","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/998934/08779a54-40fd-4116-adc7-41e01ecea922_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I9RLYhC+PpX5ae+Y5+ThVeaDEM6GR4aKPPgVWDLGPyg="></script>
+    nonce="55upmQutKBnHpI0XswY7Rd38tv37v3SqFQJ+vt58aE4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/998934/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/998934/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
