--- a/VRChat/45/997745.html
+++ b/VRChat/45/997745.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/1MCH4pinF/SuNT9rZlsWatuTY1o1hFLtO9XWyVvSJ0="></script>
+    "AnONap2yTxggKahOqwkHrcA/Uc6PekJcPxeVdyw3oGI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"鏡餅型　ローポリ Zipファイル","description":"テストでアップロードしました。\n\n\nZipファイル・約800ポリゴンの簡素な鏡餅です。\n\nVRChatでの使用を想定しています。\n\n\n小物やアバターなどお好きなように使用可能です。\n\n\n\nテクスチャ無しのモデルデータ（材質には簡単に色が付いています）のみになります。\n\n\n・ボーンは設定していません\n\n\n＊改造、改変などは自由です\n＊使用の際はツイッターまでメンション（@wataribito）を飛ばしてもらえると嬉しいです","url":"https://booth.pm/ja/items/997745","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fdd1190f-85e0-40d1-9e66-ede1399a3a63/i/997745/e4498b88-c9a5-42e9-a230-840e1ff7f69b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/1MCH4pinF/SuNT9rZlsWatuTY1o1hFLtO9XWyVvSJ0="></script>
+    nonce="AnONap2yTxggKahOqwkHrcA/Uc6PekJcPxeVdyw3oGI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/997745/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/997745/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
