--- a/VRChat/61/997761.html
+++ b/VRChat/61/997761.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KbDWNfZhuzywtqMMuFYH1vuwTrRA2VtMWzXiRfWKyeE="></script>
+    "wexyTML9ZbPCxLMDSO8SIi8kBR0kpsJlzf8Mv992P8c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"衣だけエビフライ","description":"小物として利用できるエビフライです。中身はありません。\n頭に乗せたり咥えたり、着込んだりしてご利用ください。\n\nポリゴン数(▲)の異なるモデルを3パターン用意しております。\n（▲368，▲606，▲1114）\n\nFBX形式の3DモデルファイルとUnitypackageファイルが同梱されています。\n\n※サンプル画像の質感を再現するにはノーマルマップ、MatCapの設定が必要です。\n\nデータそのままを利用できる再配布、再販以外は自由にしてください。\n\n2018/09/11  オマケとしてボーン付きエビフライ＋シームレスフライテクスチャを追加しました。","url":"https://booth.pm/ja/items/997761","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e1630f9c-2274-466a-8108-d3bc890d0975/i/997761/041c43d0-051b-47d5-9b54-ee93187b5951_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KbDWNfZhuzywtqMMuFYH1vuwTrRA2VtMWzXiRfWKyeE="></script>
+    nonce="wexyTML9ZbPCxLMDSO8SIi8kBR0kpsJlzf8Mv992P8c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/997761/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               411
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/997761/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               411
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
